Use jakarta.json instead of java.json
This also fixes various lint issues

Signed-off-by: Taylor Smock <tsmock@meta.com>